feat: Allow to extend using load-group Analytics Cell Value - MEED-1275 - Meeds-io/MIPs#13 (#116)
This change will allow to easily define analyticsExtension using
`load-group` to define in module.